lib/Numeric/GSL/Special/gamma.h

int gsl_sf_lngamma_e(double x,double* result);
double gsl_sf_lngamma(double x);
int gsl_sf_lngamma_sgn_e(double x,double* result_lg,double* sgn);
int gsl_sf_gamma_e(double x,double* result);
double gsl_sf_gamma(double x);
int gsl_sf_gammastar_e(double x,double* result);
double gsl_sf_gammastar(double x);
int gsl_sf_gammainv_e(double x,double* result);
double gsl_sf_gammainv(double x);
int gsl_sf_lngamma_complex_e(double zr,double zi,double* lnr,double* arg);
int gsl_sf_taylorcoeff_e(int n,double x,double* result);
double gsl_sf_taylorcoeff(int n,double x);
int gsl_sf_fact_e(int n,double* result);
double gsl_sf_fact(int n);
int gsl_sf_doublefact_e(int n,double* result);
double gsl_sf_doublefact(int n);
int gsl_sf_lnfact_e(int n,double* result);
double gsl_sf_lnfact(int n);
int gsl_sf_lndoublefact_e(int n,double* result);
double gsl_sf_lndoublefact(int n);
int gsl_sf_lnchoose_e(int n,int m,double* result);
double gsl_sf_lnchoose(int n,int m);
int gsl_sf_choose_e(int n,int m,double* result);
double gsl_sf_choose(int n,int m);
int gsl_sf_lnpoch_e(double a,double x,double* result);
double gsl_sf_lnpoch(double a,double x);
int gsl_sf_lnpoch_sgn_e(double a,double x,double* result,double* sgn);
int gsl_sf_poch_e(double a,double x,double* result);
double gsl_sf_poch(double a,double x);
int gsl_sf_pochrel_e(double a,double x,double* result);
double gsl_sf_pochrel(double a,double x);
int gsl_sf_gamma_inc_Q_e(double a,double x,double* result);
double gsl_sf_gamma_inc_Q(double a,double x);
int gsl_sf_gamma_inc_P_e(double a,double x,double* result);
double gsl_sf_gamma_inc_P(double a,double x);
int gsl_sf_gamma_inc_e(double a,double x,double* result);
double gsl_sf_gamma_inc(double a,double x);
int gsl_sf_lnbeta_e(double a,double b,double* result);
double gsl_sf_lnbeta(double a,double b);
int gsl_sf_lnbeta_sgn_e(double x,double y,double* result,double* sgn);
int gsl_sf_beta_e(double a,double b,double* result);
double gsl_sf_beta(double a,double b);
int gsl_sf_beta_inc_e(double a,double b,double x,double* result);
double gsl_sf_beta_inc(double a,double b,double x);